# test14

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: color.h.8C30231C4354E8A6.idx  main.c.329BD7CA674318C6.idx  main.c.A674B87243AE4559.idx  world.c.1E3A502BE8F5AA3D.idx
src/: CMakeLists.txt  color.h  main.c
